@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
package render_2d {
    '===================================================================================================================
    abstract class GeometryBatch {
        + {abstract} modify(std::function<void(GeometryBatchModifier&)>)
    }

    '===================================================================================================================
    abstract class GeometryBatchModifier {
        + ctor(GeometryBatch&)
    --
        + {abstract} clear()
    --
        + {abstract} append(Line) -> LineId
        + {abstract} append(Triangle) -> TriangleId
    --
        + {abstract} modify(LineId) -> LineModifier
        + {abstract} modify(TriangleId) -> TriangleModifier
    }

    '-------------------------------------------------------------------------------------------------------------------
    GeometryBatchModifier o-- GeometryBatch

    '===================================================================================================================
    abstract class Renderer {
        + {abstract} createGeometryBatch()
        + {abstract} renderGeometryBatch(GeometryBatch)
    }

    '-------------------------------------------------------------------------------------------------------------------
    Renderer --> GeometryBatch
}

'=======================================================================================================================
package render_3d {
    '===================================================================================================================
    abstract class GeometryBatch {
        Similar to 2D
    }

    '===================================================================================================================
    abstract class GeometryBatchModifier {
        Similar to 2D
    }

    '===================================================================================================================
    abstract class Renderer {
        Similar to 2D
    }
}

'=======================================================================================================================
@enduml
